updated house photo

--- a/erbjudande/index.html
+++ b/erbjudande/index.html
@@ -140,9 +140,11 @@
               <div class="ae-3">
 								<p style="font-size: 22px;">
 									Vi erbjuder ett komplett utbud av entreprenadbesiktningstjänster för nyproduktion och ROT.
-									<br>
+								</p>
+								<p>
 									Vi erbjuder också ett samlat helhetskoncept med iSpect för ökad lönsamhet och leveranssäkerhet i byggprojekt.
-									<br>
+								</p>
+								<p>
 									Det ger bland annat möjlighet till noll byggfel vid slutbesiktning.
 								</p>
 								<p class="popupTrigger text-blue bold small margin-bottom-3" data-popup-id="services">Våra tjänster för entreprenadbesiktning</p>
@@ -178,8 +180,11 @@
               <h1 class="">Besiktningstjänster för bostadsrättsföreningar</h1>
               <div class="ae-3">
 								<p>
-									Besiktningsman.se erbjuder tjänster och besiktningsmän för samtliga fack för besiktning av nyproduktion och ROT-arbeten i bostadrättsfastigheter, samt KA-ansvariga.
+									Besiktningsman.se erbjuder tjänster och besiktningsmän för samtliga fack för besiktning
+									av nyproduktion och ROT-arbeten i bostadrättsfastigheter, samt KA-ansvariga.
 								</p>
+								<p class="popupTrigger text-blue bold small margin-bottom-3" data-popup-id="#">Våra tjänster för Bostadsrättsföreningar</p>
+								<p class="popupTrigger text-blue bold small" data-popup-id="#">Mer om vårt erbjudande</p>
 							</div>
               <ul class="items-32">
 								<li class="fix-4-12 toLeft text-32">
@@ -205,23 +210,20 @@
           <ul class="flex reverse">
             <li class="col-6-12 left cell-32">
               <h1 class="">Besiktningstjänster för privatpersoner</h1>
-              <div class="ae-3"><p>Intro text What problem have you solved, ever, that was worth solving where you knew all the given information in&nbsp;advance?</p></div>
+							<h3>Småhus, lägenheter, fritidshus</h3>
+              <div class="ae-3">
+								<p>Besiktningsman.se erbjuder tjänster och besiktningsmän för samtliga fack för besiktning av småhus, fritidshus och lägenheter, samt KA-ansvariga.</p>
+								<p class="popupTrigger text-blue bold small margin-bottom-3" data-popup-id="#">Våra tjänster för privatpersoner</p>
+								<p class="popupTrigger text-blue bold small" data-popup-id="#">Mer om besiktning för småhus mm</p>
+							</div>
               <ul class="items-32">
-                <li class="fix-4-12 toLeft text-32">
-                  <h3 class="ae-4">Exempel 1</h3>
-                  <div class="ae-5"><p class="small">För nyproduktion och ROT erbjuder vi en komplett digital besiktningsprocess med iSpect.</p></div>
-                </li>
-                <li class="fix-4-12 toLeft text-32">
-                  <h3 class="ae-6">Exempel 2</h3>
-                  <div class="ae-7"><p class="small">Clear thinking at the wrong moment can stifle creativity.</p></div>
-                </li>
 								<li class="fix-4-12 toLeft text-32">
 									<a href="/kontakt/" class="blue common-Button">Kontakta oss för bokning</a>
 								</li>
               </ul>
             </li>
           	<li class="col-6-12 left ae-1 fromRight">
-							<img class="macbook-62 margin-bottom-3 soft-shadow" data-action="zoom" width="1000" style="border-radius: 8px;" src="../assets/img/backgrounds/house_sm.jpg" alt="Foto av ett gammalt landshus"/>
+							<img class="macbook-62 margin-bottom-3 soft-shadow" data-action="zoom" width="1000" style="border-radius: 8px;" src="../assets/img/backgrounds/village_houses.jpg" alt="Foto av ett gammalt landshus"/>
             </li>
           </ul>
         </div>
@@ -345,7 +347,7 @@
 												<br>
 												4 i övrigt särskilda skäl föreligger”
 												<br>
-												<br> 
+												<br>
 												”Kommentar till kap 7 §1 i AB04 och ABT06, Ett särskilt skäl för förbesiktning kan vara att parterna i förväg vill få besiktningsmannens bedömning av kontraktsenhetligheten av visst arbete som antingen återkommer i ett stort antal eller
 												gäller principer eller kvalitetskrav för utförandet, sk normerande besiktning.”
 											</p>
