updated the about text

--- a/om_oss/index.html
+++ b/om_oss/index.html
@@ -121,7 +121,7 @@ Besiktningsman
 				<div class="wrap">
 					<div class="fix-10-12">
 						<h1>Besiktningsman.se</h1>
-						<p>Ett oberoende besiktningsföretag bildat 2003 av erfarna besiktningsmän.<br> Idag Sveriges ledande entreprenadbesiktningsföretag för nyproduktion och ROT. </p>
+						<p>Sveriges ledande entreprenadbesiktningsföretag för nyproduktion och ROT. <br> Bildat 2003 av erfarna besiktningsmän som ett oberoende besiktningsföretag.</p>
 					</div>
 				</div>
 			</div>
@@ -136,14 +136,19 @@ Besiktningsman
 	      <div class="wrap">
 
 	        <div class="fix-10-12">
-	          <h1 class="fromCenter">Vi utför besiktnings- och KA- tjänster objektivt och opartiskt enligt gällande bygg- och branschregler. Över hela landet.</h1>
+	          <h1 class="fromCenter">Vi utför besiktnings- och KA- tjänster objektivt och opartiskt enligt gällande bygg- och branschregler.
+							<br>
+							<h2 class="small">
+								Över hela landet och med en modern digitaliserad metod.
+							</h2>
+						</h1>
 	          <div class="ae-3"><p class="margin-bottom-4 border-bottom-grey"></p></div>
 	          <div class="left ae-5 cropBottom">
-	            <p>Besiktningsman.se var vid starten 2003 främst riktat mot småhusmarknaden. Idag är vi ledande inom entreprenadbesiktning för landets bygg- och fastighetsföretag och har en fortsatt stark position bland bostadsrättsföreningar och privatpersoner.</p>
-							<p>Vi har cirka 30 välutbildade medarbetare med gedigen bakgrund från byggsektorn och besiktningsarbete. Det ger oss kapacitet att möta mycket höga kundkrav på ett stabilt och sakkunnigt utförande.</p>
+	            <p>Besiktningsman.se är ledande inom entreprenadbesiktning för nyproduktion av bostäder och kommersiella byggnader. Sedan starten 2003 har vi också en stark position på bostadsrättsförenings- och småhusmarknaden</p>
+							<p>Vi har cirka 30 välutbildade medarbetare med gedigen bakgrund från byggsektorn och besiktningsarbete. Det ger oss kapacitet att möta mycket höga kundkrav på ett stabilt och sakkunnigt utförande. Vi erbjuder kompletta besiktningsgrupper för samtliga fack.</p>
 							<p>Huvudkontoret finns i Stockholm och filialer finns i Uppsala, Norrköping, Göteborg och Helsingborg. Våra grundare och ägare är alltjämt aktiva i företaget.</p>
 							<p>Vi leder branschens utveckling och har bland annat skapat en digital besiktningsprocess i samarbete med iSpect och ledande byggföretag. Nyligen blev vi landets första besiktningsföretag att erbjuda radonkontroll.</p>
-							<p>Med vårt helhetskoncept har vi etablerat ett nytt perspektiv på besiktning – som ett aktivt affärsstöd för ökad lönsamhet och leveranssäkerhet i byggprojekt.</p>
+							<p>Med vårt helhetskoncept har vi etablerat ett nytt perspektiv på besiktning – som ett aktivt affärsstöd för ökad lönsamhet och leveranssäkerhet i byggprojekt</p>
 							<button class="common-Button white text-blue fromLeft popupTrigger" data-popup-id="#">Mer om vårt helhetskoncept</button>
 						</div>
 	        </div>
