fixed image sizes

--- a/erbjudande/index.html
+++ b/erbjudande/index.html
@@ -158,7 +158,7 @@
               </ul>
             </li>
             <li class="col-6-12 left ae-1 fromRight">
-              <img class="macbook-62 margin-bottom-3 soft-shadow" data-action="zoom" width="1000" style="border-radius: 8px;" src="../assets/img/backgrounds/goldengate.jpg" alt="Bild av byggare på Golden Gate Bridge"/>
+              <img class="macbook-62 margin-bottom-3 soft-shadow" data-action="zoom" width="1200" style="border-radius: 8px;" src="../assets/img/backgrounds/goldengate.jpg" alt="Bild av byggare på Golden Gate Bridge"/>
             </li>
           </ul>
         </div>
@@ -184,7 +184,7 @@
 									Besiktningsman.se erbjuder tjänster och besiktningsmän för samtliga fack för besiktning
 									av nyproduktion och ROT-arbeten i bostadrättsfastigheter, samt KA-ansvariga.
 								</p>
-								<p class="popupTrigger text-blue bold small margin-bottom-3" data-popup-id="#">Våra tjänster för Bostadsrättsföreningar</p>
+								<p class="popupTrigger text-blue bold small margin-bottom-3" data-popup-id="services">Våra tjänster för Bostadsrättsföreningar</p>
 								<p class="popupTrigger text-blue bold small" data-popup-id="#">Mer om vårt erbjudande</p>
 							</div>
               <ul class="items-32">
@@ -214,7 +214,7 @@
 							<h3>Småhus, lägenheter, fritidshus</h3>
               <div class="ae-3">
 								<p>Besiktningsman.se erbjuder tjänster och besiktningsmän för samtliga fack för besiktning av småhus, fritidshus och lägenheter, samt KA-ansvariga.</p>
-								<p class="popupTrigger text-blue bold small margin-bottom-3" data-popup-id="#">Våra tjänster för privatpersoner</p>
+								<p class="popupTrigger text-blue bold small margin-bottom-3" data-popup-id="services">Våra tjänster för privatpersoner</p>
 								<p class="popupTrigger text-blue bold small" data-popup-id="#">Mer om besiktning för småhus mm</p>
 							</div>
               <ul class="items-32">
@@ -224,7 +224,7 @@
               </ul>
             </li>
           	<li class="col-6-12 left ae-1 fromRight">
-							<img class="macbook-62 margin-bottom-3 soft-shadow" data-action="zoom" width="1000" style="border-radius: 8px;" src="../assets/img/backgrounds/village_houses.jpg" alt="Foto av ett gammalt landshus"/>
+							<img class="macbook-62 margin-bottom-3 soft-shadow" data-action="zoom" width="800" style="border-radius: 8px;" src="../assets/img/backgrounds/village_houses.jpg" alt="Foto av ett gammalt landshus"/>
             </li>
           </ul>
         </div>
