updated blog to blogg

--- a/brf_privat/index.html
+++ b/brf_privat/index.html
@@ -135,7 +135,7 @@
     </ul>
     <ul class="subMenu">
       <li><a href="#">About Us</a></li>
-      <li><a href="#">Blog</a></li>
+      <li><a href="#">Blogg</a></li>
       <li><a href="#">Press & Media</a></li>
       <li><a href="#">Terms of Use</a></li>
       <li><a href="#">Privacy Policy</a></li>
