--- a/nyheter/index.html
+++ b/nyheter/index.html
@@ -58,7 +58,7 @@
   <div class="sections desktop">
 	    <div class="left">
 	      <ul class="menu crop small bold">
-					<li><a href="http://medium.com/besiktningsbloggen">Blog</a></li>
+					<li><a href="http://medium.com/besiktningsbloggen">Blogg</a></li>
 					<li><a href="../nyheter/">Nyheter</a></li>
 					<li><a href="../om_oss/">Om oss</a></li>
 	      </ul>
@@ -100,7 +100,7 @@
 			<ul class="subMenu">
 				<br>
 				<br>
-				<li><a href="http://medium.com/besiktningsbloggen">Blog</a></li>
+				<li><a href="http://medium.com/besiktningsbloggen">Blogg</a></li>
 				<br>
 				<br>
 				<li><a href="../nyheter/">Nyheter</a></li>
