--- a/erbjudande/index.html
+++ b/erbjudande/index.html
@@ -60,7 +60,7 @@
 		<div class="sections desktop">
 	    <div class="left">
 	      <ul class="menu crop small bold">
-					<li><a href="http://medium.com/besiktningsbloggen">Blog</a></li>
+					<li><a href="http://medium.com/besiktningsbloggen">Blogg</a></li>
 					<li><a href="../nyheter/">Nyheter</a></li>
 					<li><a href="../om_oss/">Om oss</a></li>
 	      </ul>
@@ -105,7 +105,7 @@
 				<li><a href="../om_oss/">Om oss</a></li>
 				<br>
 				<br>
-				<li><a href="http://medium.com/besiktningsbloggen">Blog</a></li>
+				<li><a href="http://medium.com/besiktningsbloggen">Blogg</a></li>
 				<br>
 				<br>
 				<li><a href="../nyheter/">Nyheter</a></li>
