added new popover for ispect text

--- a/erbjudande/index.html
+++ b/erbjudande/index.html
@@ -149,7 +149,7 @@
 									Det ger bland annat möjlighet till noll byggfel vid slutbesiktning.
 								</p>
 								<p class="popupTrigger text-blue bold small margin-bottom-3" data-popup-id="services">Våra tjänster för entreprenadbesiktning</p>
-								<p class="popupTrigger text-blue bold small" data-popup-id="#">Vårt helhetskoncept med iSpect</p>
+								<p class="popupTrigger text-blue bold small" data-popup-id="ispect-details">Vårt helhetskoncept med iSpect</p>
 							</div>
               <ul class="items-32">
 								<li class="fix-4-12 toLeft text-32">
@@ -635,7 +635,87 @@
 		</div>
 	</div>
 </div>
+<!-- SERVICES Popup Text -->
+<div class="popup white" data-popup-id="ispect-details">
+	<div class="close button closeButton white text-blue left opaque"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#back"></use></svg>Tillbaka</div>
+	<div class="content popupContent">
+			<div class="wrap spaces">
+					<!-- Slide #30 -->
+					<section class="slide white">
+					  <div class="content">
+					    <div class="container">
+					      <div class="container-lg">
+		              <h1 class="center fromCenter margin-top-1">Vårt helhetskoncept med iSpect </h1>
+	                <h2 class="center small">- För ökad lönsamhet och leveranssäkerhet i byggprojekt.</h2>
+									<div class="margin-bottom-4 border-bottom-grey"></div>
+					        <div class="fix-12-12">
+					          <ul class="grid">
+					            <li class="col-4-12 left">
+					              <h3 class="text-blue">Skillnader</h3>
+					              <p class="small">
+													Vid traditionell besiktning görs normalt bara för- och slutbesiktning, sedan sänds utlåtandet och felavhjälpning kan börja. Ofta sedan byggnaden tagits i bruk.
+													<br>
+													<br>
+													Vår lösning med iSpect omfattar hela byggprocessen. Vi ser till att fel kan förebyggas och att uppkomna fel kan åtgärdas direkt.
+												</p>
+					            </li>
+					            <li class="col-4-12 left ">
+					              <h3 class="text-blue">Fördelar</h3>
+					              <p class="small">
+													•	Inga dolda fel
+													<br>
+													•	Inga onödiga produktionsstopp
+													<br>
+													•	Ökad kvalitetssträvan främjas
+													<br>
+													•	Säker och lättillgänglig dokumentation
+													<br>
+													•	Ökad möjlighet till direkt erfarenhetsåterföring
+													<br>
+													•	Möjlighet till noll fel vid överlämnandet
+													<br>
+													•	Tillgång till ”Byggfelsbank” med tidigare erfarenheter och 300 000 byggfel
+												</p>
+					            </li>
+					            <li class="col-4-12 left">
+					              <h3 class="text-blue">Effekter</h3>
+					              <p class="small">
+													Ökad lönsamhet i byggprojekt genom kraftigt reducerade kostader för felavhjälpning, från byggstart fram till att den 10-åriga garantiperioden passerats.
+													<br>
+													<br>
+													Ökad leveranssäkerhet och kundnöjdhet genom ingen eller kraftigt minskad felavhjälpning efter överlämnandet
+												</p>
+					            </li>
+					          </ul>
+					        </div>
 
+					      </div>
+					    </div>
+					  </div>
+			</div>
+	</section>
+	<section class="slide white">
+			<div class="content">
+				<div class="container">
+					<div class="container-lg">
+
+				      <ul class="flex reverse">
+				        <li class="col-6-12 left cell-32">
+				          <h1>Med iSpect</h1>
+									<p>Kan besiktningsmannen under sitt arbete kontrollera, dokumentera, lagra och sända alla noteringar och projektdata direkt via sin läsplatta.</p>
+				        </li>
+				        <li class="col-6-12 left">
+				          <img class="" src="../assets/img/ispect/ipad_front_sv.png" width="600" alt="iPad Image"/>
+				        </li>
+				      </ul>
+
+					</div>
+				</div>
+			</div>
+		</section>
+
+	</div>
+</div>
 	<!-- POLICYS Popup Text -->
 	<div class="popup animated" data-popup-id="text">
 		<div class="close button closeButton white left opaque"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#back"></use></svg>Tillbaka</div>
