--- a/om_oss/index.html
+++ b/om_oss/index.html
@@ -136,13 +136,14 @@ Besiktningsman
 	      <div class="wrap">
 
 	        <div class="fix-10-12">
-	          <h1 class="fromCenter">Vi utför besiktnings- och KA- tjänster objektivt och opartiskt enligt gällande bygg- och branschregler.
-							<br>
-							<h2 class="small">
-								Över hela landet och med en modern digitaliserad metod.
-							</h2>
+	          <h1 class="fromCenter">
+							Vi utför besiktnings- och KA- tjänster objektivt och opartiskt enligt gällande bygg- och branschregler.
 						</h1>
-	          <div class="ae-3"><p class="margin-bottom-4 border-bottom-grey"></p></div>
+						<br>
+						<h2 class="small">
+							Över hela landet och med en modern digitaliserad metod.
+						</h2>
+	          <div class="margin-bottom-4 border-bottom-grey"></div>
 	          <div class="left ae-5 cropBottom">
 	            <p>Besiktningsman.se är ledande inom entreprenadbesiktning för nyproduktion av bostäder och kommersiella byggnader. Sedan starten 2003 har vi också en stark position på bostadsrättsförenings- och småhusmarknaden</p>
 							<p>Vi har cirka 30 välutbildade medarbetare med gedigen bakgrund från byggsektorn och besiktningsarbete. Det ger oss kapacitet att möta mycket höga kundkrav på ett stabilt och sakkunnigt utförande. Vi erbjuder kompletta besiktningsgrupper för samtliga fack.</p>
