--- a/erbjudande/index.html
+++ b/erbjudande/index.html
@@ -329,7 +329,7 @@
 						</div>
 						<!-- accordion for exaplanatory texts -->
 						<div class="fix-10-12">
-							<h1>Entreprenadtjänster</h1>
+							<h1>Besiktningstjänster</h1>
 							<ul class="cd-accordion-menu animated">
 
 								<li class="has-children">
