--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 				</ul>
 			</div>
 			<div class="center">
-				<a href="/"> <img src="assets/svg/bm_logo_top.svg" alt="Besiktningsman.se" style="width:200px;"> </a>
+				<a href="../"> <img src="assets/svg/bm_logo_top.svg" alt="Besiktningsman.se" style="width:200px;"> </a>
 			</div>
 			<div class="right">
 				<ul class="menu crop small bold">
