--- a/nyheter/index.html
+++ b/nyheter/index.html
@@ -63,7 +63,7 @@
 					<li><a href="../om_oss/">Om oss</a></li>
 	      </ul>
 	    </div>
-	    <div class="center"><a href="/"> <img src="../assets/svg/bm_logo_top.svg" alt="Besiktningsman.se" style="width:200px;">  </a></div>
+	    <div class="center"><a href="../"> <img src="../assets/svg/bm_logo_top.svg" alt="Besiktningsman.se" style="width:200px;">  </a></div>
 	    <div class="right">
 	      <ul class="menu crop small bold">
 	        <li><a href="../erbjudande/">Vårt erbjudande</a></li>
@@ -73,7 +73,7 @@
 	    </div>
   </div>
   <div class="sections compact hidden">
-    <div class="left"><a href="/"><img src="../assets/svg/bm_logo_top.svg" alt="Besiktningsman.se" style="width:200px;"></a></div>
+    <div class="left"><a href="../"><img src="../assets/svg/bm_logo_top.svg" alt="Besiktningsman.se" style="width:200px;"></a></div>
     <div class="right"><span class="button actionButton sidebarTrigger" data-sidebar-id="1"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#menu"></use></svg></span></div>
   </div>
 </nav>
