--- a/om_oss/index.html
+++ b/om_oss/index.html
@@ -65,7 +65,7 @@ Besiktningsman
 				</ul>
 			</div>
 			<div class="center">
-				<a href="/"> <img src="../assets/svg/bm_logo_top.svg" alt="Besiktningsman.se" style="width:200px;"> </a>
+				<a href="../"><img src="../assets/svg/bm_logo_top.svg" alt="Besiktningsman.se" style="width:200px;"> </a>
 			</div>
 			<div class="right">
 				<ul class="menu crop small bold">
@@ -77,7 +77,7 @@ Besiktningsman
 		</div>
 		<div class="sections compact hidden">
 			<div class="left">
-				<a href="/"><img src="../assets/svg/bm_logo.svg" alt="Besiktningsman.se" style="width:200px;"></a>
+				<a href="../"><img src="../assets/svg/bm_logo.svg" alt="Besiktningsman.se" style="width:200px;"></a>
 			</div>
 			<div class="right"><span class="button actionButton sidebarTrigger" data-sidebar-id="1"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#menu"></use></svg></span></div>
 		</div>
