--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 		</div>
 		<div class="sections compact hidden">
 			<div class="left">
-				<a href="/bm_se/"><img src="assets/svg/bm_logo.svg" alt="Besiktningsman.se" style="width:200px;"></a>
+				<a href="https://mavko.github.io/bm_se/"><img src="assets/svg/bm_logo.svg" alt="Besiktningsman.se" style="width:200px;"></a>
 			</div>
 			<div class="right"><span class="button actionButton sidebarTrigger" data-sidebar-id="1"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#menu"></use></svg></span></div>
 		</div>
