--- a/kontakt/index.html
+++ b/kontakt/index.html
@@ -212,7 +212,7 @@
 							<p class="small"><a href="../nyheter/">Nyheter</a></p>
 							<p class="small"><a href="../erbjudande/">Vårt erbjudande</a></p>
 							<p class="small"><a href="../kontakt/">Kontakt</a></p>
-							<p class="small popupTrigger" data-popup-id="text">Våra policys</p>
+							<p class="small popupTrigger" data-popup-id="policy">Våra policys</p>
 						</li>
 						<li class="col-5-10 ae-4">
 							<h3 class="margin-bottom-1">Länkar</h3>
@@ -237,7 +237,7 @@
 	</section>
 
 	<!-- POLICYS Popup Text -->
-	<div class="popup animated" data-popup-id="text">
+	<div class="popup animated" data-popup-id="policy">
 		<div class="close button closeButton white left opaque"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#back"></use></svg>Tillbaka</div>
 		<div class="content popupContent">
 			<div class="container">
