added BRF and Private detail text popovers

--- a/erbjudande/index.html
+++ b/erbjudande/index.html
@@ -185,7 +185,7 @@
 									av nyproduktion och ROT-arbeten i bostadrättsfastigheter, samt KA-ansvariga.
 								</p>
 								<p class="popupTrigger text-blue bold small margin-bottom-3" data-popup-id="services">Våra tjänster för Bostadsrättsföreningar</p>
-								<p class="popupTrigger text-blue bold small" data-popup-id="#">Mer om vårt erbjudande</p>
+								<p class="popupTrigger text-blue bold small" data-popup-id="brf-services">Mer om vårt erbjudande</p>
 							</div>
               <ul class="items-32">
 								<li class="fix-4-12 toLeft text-32">
@@ -215,7 +215,7 @@
               <div class="ae-3">
 								<p>Besiktningsman.se erbjuder tjänster och besiktningsmän för samtliga fack för besiktning av småhus, fritidshus och lägenheter, samt KA-ansvariga.</p>
 								<p class="popupTrigger text-blue bold small margin-bottom-3" data-popup-id="services">Våra tjänster för privatpersoner</p>
-								<p class="popupTrigger text-blue bold small" data-popup-id="#">Mer om besiktning för småhus mm</p>
+								<p class="popupTrigger text-blue bold small" data-popup-id="privat-services">Mer om besiktning för småhus mm</p>
 							</div>
               <ul class="items-32">
 								<li class="fix-4-12 toLeft text-32">
@@ -257,7 +257,7 @@
 							<p class="small"><a href="../nyheter/">Nyheter</a></p>
 							<p class="small"><a href="../erbjudande/">Vårt erbjudande</a></p>
 							<p class="small"><a href="../kontakt/">Kontakt</a></p>
-							<p class="small popupTrigger" data-popup-id="text">Våra policys</p>
+							<p class="small popupTrigger" data-popup-id="policy">Våra policys</p>
 						</li>
 						<li class="col-5-10 ae-4">
 							<h3 class="margin-bottom-1">Länkar</h3>
@@ -281,6 +281,213 @@
 		</div>
 	</section>
 
+<!-- ispect details Popup Text -->
+<div class="popup white" data-popup-id="ispect-details">
+	<div class="close button closeButton white text-blue left opaque"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#back"></use></svg>Tillbaka</div>
+	<div class="content popupContent">
+			<div class="wrap spaces">
+					<!-- Slide #30 -->
+					<section class="slide white">
+					  <div class="content">
+					    <div class="container">
+					      <div class="container-lg">
+		              <h1 class="center fromCenter margin-top-1">Vårt helhetskoncept med iSpect </h1>
+	                <h2 class="center small">- För ökad lönsamhet och leveranssäkerhet i byggprojekt.</h2>
+									<div class="margin-bottom-4 border-bottom-grey"></div>
+					        <div class="fix-12-12">
+					          <ul class="grid">
+					            <li class="col-4-12 left">
+					              <h3 class="text-blue">Skillnader</h3>
+					              <p class="small">
+													Vid traditionell besiktning görs normalt bara för- och slutbesiktning, sedan sänds utlåtandet och felavhjälpning kan börja. Ofta sedan byggnaden tagits i bruk.
+													<br>
+													<br>
+													Vår lösning med iSpect omfattar hela byggprocessen. Vi ser till att fel kan förebyggas och att uppkomna fel kan åtgärdas direkt.
+												</p>
+					            </li>
+					            <li class="col-4-12 left ">
+					              <h3 class="text-blue">Fördelar</h3>
+					              <p class="small">
+													•	Inga dolda fel
+													<br>
+													•	Inga onödiga produktionsstopp
+													<br>
+													•	Ökad kvalitetssträvan främjas
+													<br>
+													•	Säker och lättillgänglig dokumentation
+													<br>
+													•	Ökad möjlighet till direkt erfarenhetsåterföring
+													<br>
+													•	Möjlighet till noll fel vid överlämnandet
+													<br>
+													•	Tillgång till ”Byggfelsbank” med tidigare erfarenheter och 300 000 byggfel
+												</p>
+					            </li>
+					            <li class="col-4-12 left">
+					              <h3 class="text-blue">Effekter</h3>
+					              <p class="small">
+													Ökad lönsamhet i byggprojekt genom kraftigt reducerade kostader för felavhjälpning, från byggstart fram till att den 10-åriga garantiperioden passerats.
+													<br>
+													<br>
+													Ökad leveranssäkerhet och kundnöjdhet genom ingen eller kraftigt minskad felavhjälpning efter överlämnandet
+												</p>
+					            </li>
+					          </ul>
+					        </div>
+
+					      </div>
+					    </div>
+					  </div>
+			</div>
+	</section>
+	<section class="slide white">
+			<div class="content">
+				<div class="container">
+					<div class="container-lg">
+
+				      <ul class="flex reverse">
+				        <li class="col-6-12 left cell-32">
+				          <h1>Med iSpect</h1>
+									<p>Kan besiktningsmannen under sitt arbete kontrollera, dokumentera, lagra och sända alla noteringar och projektdata direkt via sin läsplatta.</p>
+				        </li>
+				        <li class="col-6-12 left">
+				          <img class="" src="../assets/img/ispect/ipad_front_sv.png" width="600" alt="iPad Image"/>
+				        </li>
+				      </ul>
+
+					</div>
+				</div>
+			</div>
+		</section>
+
+	</div>
+</div>
+<!-- brf services Popup Text -->
+<div class="popup white" data-popup-id="brf-services">
+	<div class="close button closeButton white text-blue left opaque"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#back"></use></svg>Tillbaka</div>
+	<div class="content popupContent">
+		<div class="wrap spaces">
+			<!-- contents -->
+			<section class="slide white">
+				<div class="content">
+					<div class="container">
+						<div class="container-lg">
+							<h1 class="center fromCenter margin-top-1">Besiktningsman för bostadsrättsföreningar</h1>
+							<h2 class="center small">Digital besiktningsprocess</h2>
+							<div class="margin-bottom-4 border-bottom-grey"></div>
+							<!-- Slide #24 -->
+
+							<div class="fix-10-12">
+								<div class="left ae-5 cropBottom">
+									<p>
+										I en bostadsrättsförening pågår ständigt förbättringar dels i lägenheterna och dels i fastigheten som helhet. Styrelsen har ett stort ansvar för fastigheten gällande myndighets- och försäkringskrav samt att hålla fastigheten i ett bra skick med underhålls-
+										och åtgärdsplaner för att bibehålla fastighetens värde.
+									</p>
+									<p>
+										Som specialist på besiktningar med stor erfarenhet av renoveringar och nyproduktion erbjuder vi fasta priser på besiktningar gällande de flesta åtgärder i en fastighet. I vissa fall är det svårt att sätta ett fast pris och då gäller vår löpande timdebitering.
+									</p>
+									<p>
+										Vi har besiktningsmän för samtliga fack och vi utför besiktning med besiktningsappen iSpect vilket ger i princip omedelbar digital leverans av besiktningsutlåtandet till iSpectportal där ni får tillgång till statistik och erfarenhetsåterföring.
+									</p>
+									<p>
+										Vi har även KA-kontrollansvarig.
+									</p>
+									<ul>
+										<li>
+											<h2 class="bold">I våra priser ingår:</h2>
+										</li>
+										<li>
+											<p class="small">Vår projektansvarige för all kontakt och samordning med besiktningsman eller besiktningsgrupp kallelser, restid, besiktning på plats, digitalt utskick av utlåtande.</p>
+										</li>
+										<li>
+											<p class="small">Upprättande av besiktningstidplan med eventuella justeringar, beroende på typ av besiktning,</p>
+										</li>
+										<li>
+											<p class="small">Ett informationsmöte med brf-styrelsen om hur besiktningen går till, beroende på typ av besiktning,</p>
+										</li>
+									</ul>
+									<ul>
+										<li>
+											<p class="small">Vid längre samarbeten har ni alltid er ”egen” huvudbesiktningsman och projektansvarige.</p>
+										</li>
+										<li>
+											<p class="small">I vårt nätverk kan vi även erbjuda projektledning/upphandling.</p>
+										</li>
+										<li>
+											<p class="small">Om ni har en nyproducerad brf och söker besiktningsgrupp för 2-års besiktning/garantibesiktning offererar vi ett fast pris till er.</p>
+										</li>
+									</ul>
+
+								</div>
+							</div>
+
+						</div>
+					</div>
+				</div>
+			</section>
+		</div>
+	</div>
+</div>
+<!-- privat services Popup Text -->
+<div class="popup white" data-popup-id="privat-services">
+	<div class="close button closeButton white text-blue left opaque"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#back"></use></svg>Tillbaka</div>
+	<div class="content popupContent">
+		<div class="wrap spaces">
+			<!-- contents -->
+			<section class="slide white">
+				<div class="content">
+					<div class="container">
+						<div class="container-lg">
+							<h1 class="center fromCenter margin-top-1">Besiktningsman.se för privatpersoner</h1>
+							<h2 class="center small">Digital besiktningsprocess</h2>
+							<div class="margin-bottom-4 border-bottom-grey"></div>
+							<!-- Slide #24 -->
+
+							<div class="fix-10-12">
+								<div class="left ae-5 cropBottom">
+									<p class="bold">Vad är en husbesiktning?</p>
+									<p>
+										Husbesiktning, eller entreprenadbesiktning som den rätta termen lyder, görs i samband med alla former av byggnation där du anlitat en byggentreprenör.
+									</p>
+									<p>
+										Det kan handla om att du bygger nytt, bygger till, renoverar eller bygger om. Det kan vara en villa, lägenhet, sommarstuga eller annan byggnad.
+									</p>
+									<p>
+										När du gör en sådan pass stor investering är det naturligt att känna oro för alla myndighetskrav och byggregler.<br>
+										Därför är det viktigt att du själv väljer både Kontrollansvarig och Besiktningsman enligt din lagliga rätt.<br>
+										Kontrollansvarig är din förlängda arm gällande myndighetskrav och Besiktningsman är den person som opartiskt, objektivt samt självständigt utför besiktning mellan dig och din/a entreprenör/er gällande de arbeten som entreprenören har utfört i förhållande till myndighetskrav, bygg- och branschregler.
+									</p>
+									<p>
+										Syftet med besiktningen är att få en opartisk fackmässig kontroll av att byggentreprenören utfört sitt arbete på ett korrekt sätt och på det sätt ni kommit överens om. <br>
+										Det finns flera olika former av besiktningar, och en god regel är att göra en s k slutbesiktning innan du betalar slutfakturan för arbetet.
+									</p>
+									<p>
+										Besiktningen är viktig eftersom den ger ett opartiskt underlag som kan vara mycket betydelsefull om något blir fel eller om det uppstår tvister mellan dig och entreprenören eller berörda försäkringsbolag.
+									</p>
+									<p>
+										De fel som besiktningsman noterar vid besiktning har entreprenören både rätt och skyldighet att avhjälpa och avhjälpande ska ske snarast eller senast inom två månader.
+									</p>
+									<p>
+										Vi rekommenderar Besiktningsmannaboken som hjälper er att få en klarare bild av vilka krav som ställs vid besiktning samt hur besiktningen går till.
+									</p>
+									<p>
+										För småhusentreprenader med konsument som beställare bör standardavtalet ABS09 tillämpas gällande nybyggnad eller tillbyggnad.
+										<br>För ombyggnation, installationsarbeten och andra arbeten/entreprenader gäller Hantverkarformuläret.
+										<br>För rörinstallationer finns även RK.
+									</p>
+									<p>
+										Konsumenttjänstlagen, ABS, Hantverkarformuläret samt Besiktningsmannaboken kan laddas ned hos  <a href="www.konsumentverket.se" class="text-blue">www.konsumentverket.se</a>
+									</p>
+								</div>
+							</div>
+
+						</div>
+					</div>
+				</div>
+			</section>
+		</div>
+	</div>
+</div>
 <!-- SERVICES Popup Text -->
 <div class="popup animated white" data-popup-id="services">
 	<div class="close button closeButton white text-blue left opaque"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#back"></use></svg>Tillbaka</div>
@@ -635,89 +842,9 @@
 		</div>
 	</div>
 </div>
-<!-- SERVICES Popup Text -->
-<div class="popup white" data-popup-id="ispect-details">
-	<div class="close button closeButton white text-blue left opaque"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#back"></use></svg>Tillbaka</div>
-	<div class="content popupContent">
-			<div class="wrap spaces">
-					<!-- Slide #30 -->
-					<section class="slide white">
-					  <div class="content">
-					    <div class="container">
-					      <div class="container-lg">
-		              <h1 class="center fromCenter margin-top-1">Vårt helhetskoncept med iSpect </h1>
-	                <h2 class="center small">- För ökad lönsamhet och leveranssäkerhet i byggprojekt.</h2>
-									<div class="margin-bottom-4 border-bottom-grey"></div>
-					        <div class="fix-12-12">
-					          <ul class="grid">
-					            <li class="col-4-12 left">
-					              <h3 class="text-blue">Skillnader</h3>
-					              <p class="small">
-													Vid traditionell besiktning görs normalt bara för- och slutbesiktning, sedan sänds utlåtandet och felavhjälpning kan börja. Ofta sedan byggnaden tagits i bruk.
-													<br>
-													<br>
-													Vår lösning med iSpect omfattar hela byggprocessen. Vi ser till att fel kan förebyggas och att uppkomna fel kan åtgärdas direkt.
-												</p>
-					            </li>
-					            <li class="col-4-12 left ">
-					              <h3 class="text-blue">Fördelar</h3>
-					              <p class="small">
-													•	Inga dolda fel
-													<br>
-													•	Inga onödiga produktionsstopp
-													<br>
-													•	Ökad kvalitetssträvan främjas
-													<br>
-													•	Säker och lättillgänglig dokumentation
-													<br>
-													•	Ökad möjlighet till direkt erfarenhetsåterföring
-													<br>
-													•	Möjlighet till noll fel vid överlämnandet
-													<br>
-													•	Tillgång till ”Byggfelsbank” med tidigare erfarenheter och 300 000 byggfel
-												</p>
-					            </li>
-					            <li class="col-4-12 left">
-					              <h3 class="text-blue">Effekter</h3>
-					              <p class="small">
-													Ökad lönsamhet i byggprojekt genom kraftigt reducerade kostader för felavhjälpning, från byggstart fram till att den 10-åriga garantiperioden passerats.
-													<br>
-													<br>
-													Ökad leveranssäkerhet och kundnöjdhet genom ingen eller kraftigt minskad felavhjälpning efter överlämnandet
-												</p>
-					            </li>
-					          </ul>
-					        </div>
 
-					      </div>
-					    </div>
-					  </div>
-			</div>
-	</section>
-	<section class="slide white">
-			<div class="content">
-				<div class="container">
-					<div class="container-lg">
-
-				      <ul class="flex reverse">
-				        <li class="col-6-12 left cell-32">
-				          <h1>Med iSpect</h1>
-									<p>Kan besiktningsmannen under sitt arbete kontrollera, dokumentera, lagra och sända alla noteringar och projektdata direkt via sin läsplatta.</p>
-				        </li>
-				        <li class="col-6-12 left">
-				          <img class="" src="../assets/img/ispect/ipad_front_sv.png" width="600" alt="iPad Image"/>
-				        </li>
-				      </ul>
-
-					</div>
-				</div>
-			</div>
-		</section>
-
-	</div>
-</div>
 	<!-- POLICYS Popup Text -->
-	<div class="popup animated" data-popup-id="text">
+	<div class="popup animated" data-popup-id="policy">
 		<div class="close button closeButton white left opaque"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#back"></use></svg>Tillbaka</div>
 		<div class="content popupContent">
 			<div class="container">
