added news slide

--- a/nyheter/index.html
+++ b/nyheter/index.html
@@ -123,10 +123,29 @@
   </div>
 	<div class="background" style="background-image:url(../assets/img/backgrounds/keyboard.jpg)"></div>
 </section>
-<!-- Slide #81 -->
 <section class="slide fade kenBurns whiteSlide">
   <div class="content">
     <div class="container-lg  margin-top-1 margin-bottom-10">
+      <div class="wrap">
+
+        <div class="fix-10-12">
+          <h1 class="ae-1 fromLeft left">Backåkra</h1>
+					<p>
+						I mars 2017 byggstartades Einar Mattssons projekt Backåkra med 81 hyresrättslägenheter i Norra Djurgårdsstaden i Stockholm.  Besiktningsman.se utför här entreprenadbesiktning med iSpect, en metod som redan används i ett 50-tal olika projekt.
+					</p>
+          <div class="ae-2 fromLeft left">
+            <img src="../assets/img/nyheter/rl_backakra.png" alt="Backåkra besiktningsfoto">
+						<p class="small bold" style="font-size: 18px;">Robert Lindblom från Besiktningsman.se utför entreprenadbesiktningen av Einar Mattssons nya projekt Backåkra.</p>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</section>
+<section class="slide whiteSlide">
+  <div class="content">
+    <div class="container-lg margin-bottom-10">
       <div class="wrap">
 
         <div class="fix-10-12">
