landing page updated with new layout to accommodate the graph (temp)

--- a/index.html
+++ b/index.html
@@ -116,9 +116,9 @@
 	</nav>
 
 	<!-- INTRO SLIDE -->
-	<section class="slide fade" data-name="home" id="intro">
+	<section class="slide fade" data-name="home">
 		<div class="content">
-			<div class="container" style="height: 760px;">
+			<div class="container">
 				<div class="wrap">
 
 					<div class="fix-10-12">
@@ -134,7 +134,34 @@
 	</section>
 	<!-- E-besiktning SLIDE -->
 	</section>
-	<section class="slide whiteSlide kenBurns fromLeft">
+	<!-- Slide #36 -->
+<section class="slide whiteSlide">
+  <div class="content">
+    <div class="container">
+      <div class="wrap top">
+
+        <div class="fix-10-12 toCenter">
+          <h1 class="">Entreprenadbesiktning som ökar lönsamheten.</h1>
+					<p>
+						Besiktningsman.se erbjuder för entreprenadbesiktning som ger ett <br>aktivt stöd för sänkt kostnad och ökad lönsamhet i projekt.
+						<br>
+						<br>
+						Ger möjlighet att överlämna ett färdigt projekt<br> med noll byggfel på avtalad dag.
+					</p>
+					<div class="border-bottom-grey margin-bottom-5"></div>
+        </div>
+        <div class="fix-12-12">
+					<p class="small margin-bottom-1 text-blueGrey" style="">
+						Kvar av projektets avkastning fram till garantiperiodens utgång efter 10 år. Ett exempel.
+					</p>
+          <img class="soft-shadow" width="1000" style="border-radius: 8px;" src="assets/img/ispect/graph2.png" alt="Graf av entreprenadkostnader"/>
+        </div>
+				<a href="kontakt/" class="common-Button blue text-white margin-top-1">kontakta oss för att boka tid</a>
+      </div>
+    </div>
+  </div>
+</section>
+	<!-- <section class="slide whiteSlide kenBurns fromLeft">
 		<div class="content">
 			<div class="container" style="height: 100% !important;">
 				<div class="wrap" style="display: block;">
@@ -150,7 +177,7 @@
 								<a href="kontakt/" class="common-Button blue text-white">kontakta oss</a>
 							</li>
 	            <li class="col-6-12 left ae-1 fromRight">
-	              <img class="macbook-62 soft-shadow" data-action="zoom" width="1000" style="border-radius: 8px;" src="assets/img/ispect/stats.jpg" alt="Graf av entreprenadkostnader"/>
+	              <img class="macbook-62 soft-shadow" data-action="zoom" width="1000" style="border-radius: 8px;" src="assets/img/ispect/graph2.png" alt="Graf av entreprenadkostnader"/>
 	            </li>
 						</ul>
 					</div>
@@ -158,7 +185,7 @@
 				</div>
 			</div>
 		</div>
-	</section>
+	</section> -->
 	<section class="slide whiteSlide light-blue" id="aktivaProjekt">
 		<div class="container-wide Gallery-container">
 		      <div class="row center-xs">
@@ -205,7 +232,7 @@
 								<div class="ae-2 fromLeft">
 									<p>iSpect ger direkt felavhjälpning, lättillgänglig och säker dokumentation samt noll byggfel.</p>
 								</div>
-								<!-- <a class="common-Button blue text-white">mer om ispect</a> -->
+								<a href="erbjudande/#foretag" class="common-Button blue text-white">Läs mer om vårt erbjudande</a>
 							</li>
 						</ul>
 					</div>
