--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 	<script src="js/slides.js" type="text/javascript" name="main-scripts"></script>
 </head>
 
-<body class="slides scroll simplifiedMobile">
+<body class="slides scroll simplifiedMobile defaultScroll">
 	<!-- SVG Library -->
 	<svg xmlns="http://www.w3.org/2000/svg" style="display:none">
 	  <symbol id="close" viewBox="0 0 30 30"><path d="M15 0c-8.3 0-15 6.7-15 15s6.7 15 15 15 15-6.7 15-15-6.7-15-15-15zm5.7 19.3c.4.4.4 1 0 1.4-.2.2-.4.3-.7.3s-.5-.1-.7-.3l-4.3-4.3-4.3 4.3c-.2.2-.4.3-.7.3s-.5-.1-.7-.3c-.4-.4-.4-1 0-1.4l4.3-4.3-4.3-4.3c-.4-.4-.4-1 0-1.4s1-.4 1.4 0l4.3 4.3 4.3-4.3c.4-.4 1-.4 1.4 0s.4 1 0 1.4l-4.3 4.3 4.3 4.3z"/></symbol>
@@ -154,7 +154,7 @@
 					<p class="small margin-bottom-1 text-blueGrey" style="">
 						Kvar av projektets avkastning fram till garantiperiodens utgång efter 10 år. Ett exempel.
 					</p>
-          <img class="soft-shadow" width="1000" style="border-radius: 8px;" src="assets/img/ispect/graph2.png" alt="Graf av entreprenadkostnader"/>
+          <img class="soft-shadow" width="900" style="border-radius: 8px;" src="assets/img/ispect/graph2.png" alt="Graf av entreprenadkostnader"/>
         </div>
 				<a href="kontakt/" class="common-Button blue text-white margin-top-1">kontakta oss för att boka tid</a>
       </div>
