--- a/erbjudande/index.html
+++ b/erbjudande/index.html
@@ -833,7 +833,8 @@
 							</div>
 						</ul>
 						<!-- cd-accordion-menu -->
-						<a href="/kontakt/" class="blue common-Button margin-top-1">Kontakta oss för bokning</a> <a href="tel:0101654000" class="bold text-blue margin-left-1">Eller ring direkt: 010-165 40 00</a>
+							<a href="/kontakt/" class="blue common-Button margin-top-1">Kontakta oss för bokning</a> <p><a href="tel:0101654000" class="bold text-blue margin-left-1">Eller ring direkt: 010-165 40 00</a></p>
+
 					</ul>
 
 
