--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 	</nav>
 
 	<!-- INTRO SLIDE -->
-	<section class="slide fade" data-name="home">
+	<section class="slide fade" data-name="home" id="intro">
 		<div class="content">
 			<div class="container">
 				<div class="wrap">
