removed button styles from contact text

--- a/kontakt/index.html
+++ b/kontakt/index.html
@@ -70,7 +70,7 @@
 				<ul class="menu crop small bold">
 					<li><a href="../erbjudande/">Vårt erbjudande</a></li>
 					<li><a href="../karriar/">Karriär</a></li>
-					<li><a href="../kontakt/" class="blue text-white small drop-shadow" style="padding:5px 12px 5px 12px; border-radius: 4px;">Kontakt</a></li>
+					<li><a href="../kontakt/" class="text-blue" style="padding:5px 12px 5px 12px; border-radius: 4px;">Kontakt</a></li>
 				</ul>
 			</div>
 		</div>
@@ -237,7 +237,7 @@
 	</section>
 
 	<!-- POLICYS Popup Text -->
-	<div class="popup animated" data-popup-id="policy">
+	<div class="popup white" data-popup-id="policy">
 		<div class="close button closeButton white left opaque"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#back"></use></svg>Tillbaka</div>
 		<div class="content popupContent">
 			<div class="container">
@@ -297,7 +297,7 @@
 		</div>
 	</div>
 	<!-- CONTACT INFO POPOVER -->
-	<div class="popup" data-popup-id="contactInfo">
+	<div class="popup white" data-popup-id="contactInfo">
 		<div class="close button closeButton white left opaque"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#back"></use></svg>Tillbaka</div>
 		<div class="content popupContent">
 			<div class="container-lg margin-top-1">
