--- a/erbjudande/index.html
+++ b/erbjudande/index.html
@@ -70,7 +70,7 @@
 	      <ul class="menu crop small bold">
 	        <li><a href="../erbjudande/">Vårt erbjudande</a></li>
 	        <li><a href="../karriar/">Karriär</a></li>
-					<li><a href="../kontakt/" class="blue text-white small drop-shadow" style="padding:5px 12px 5px 12px; border-radius: 4px;">Kontakt</a></li>
+					<li><a href="../kontakt/" class="text-blue" style="padding:5px 12px 5px 12px; border-radius: 4px;">Kontakt</a></li>
 	      </ul>
 	    </div>
 		</div>
